--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="static/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body> 
     <div class="bingoBoard">
@@ -87,5 +87,5 @@
   </body>
   
   
-  <script src="script.js"></script>
+  <script src="static/script.js"></script>
 </html>
